Fixed issue where the profile picture started off as a small oval, wrapped image in container of fixed size instead. Profile pictures are now automatically cropped to fit into the space

--- a/client/src/components/profile/Profile.css
+++ b/client/src/components/profile/Profile.css
@@ -21,9 +21,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-right: 100px;
   border-radius: 100px;
   border: 3px solid #f5f5f5;
+  object-fit: cover;
+}
+
+.profilePictureContainer {
+  height: 168px;
+  width: 168px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 100px;
 }
 
 .userInfoContainer {
@@ -52,10 +61,6 @@
   color: gray;
   cursor: pointer;
 }
-
-
-
-
 
 .profilePostsContainer {
   margin: auto;
@@ -112,15 +117,13 @@
   background-color: transparent;
 }
 
-
-
 .allFollowersandFollowingList {
-background-color: #f4f4f4;
-margin: 10% auto;
-padding: 20px;
-width: 100%;
-height: 500px;
-box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2),0 7px 20px 0 rgba(0,0,0,0.2)
+  background-color: #f4f4f4;
+  margin: 10% auto;
+  padding: 20px;
+  width: 100%;
+  height: 500px;
+  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.2);
 }
 
 .closeBtn {
@@ -129,7 +132,8 @@ box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2),0 7px 20px 0 rgba(0,0,0,0.2)
   font-size: 30px;
 }
 
-.closeBtn:hover, .closeBtn:focus{
+.closeBtn:hover,
+.closeBtn:focus {
   color: black;
   text-decoration: none;
   cursor: pointer;
